# agent-platform

./: .gitignore  .gitmodules  alembic.ini  pyproject.toml
agents/: __init__.py
agents/openharness/: __init__.py  adapter.py  config.py
alembic/: env.py
alembic/versions/: 001_initial_models.py  28b04c37cb48_add_agent_config_approval_budget_audit_.py
docs/: api-protocol.md  frontend-require.md  require.md
docs/plan/: frontend_roadmap.yaml  phase1_infrastructure.yaml
frontend/: .env.development  .env.production  index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/api/: agents.ts  approvals.ts  auth.ts  billing.ts  builder.ts  client.ts  index.ts  market.ts  memory.ts  org.ts  tasks.ts
frontend/src/components/: AuthGuard.tsx  ConfirmButton.tsx  CopyButton.tsx  ErrorBoundary.tsx  LoadingCard.tsx  RoleGuard.tsx  (+2 more)
scripts/: _check_cols.py  dev_start.ps1  smoke_m3_billing.py  verify_full_chain.ps1
services/auth/: pyproject.toml
services/billing/: pyproject.toml
services/gateway/: pyproject.toml
services/host/: pyproject.toml
services/host/src/agentp_host/: __main__.py  config.py  main.py  service.py
services/host/src/agentp_host/api/v1/: agents.py
services/host/src/ohent_host/: __main__.py  main.py  service.py
services/host/src/ohent_host/api/v1/: agents.py
services/market/: pyproject.toml
services/market/src/agentp_market/: __main__.py  main.py  service.py
services/market/src/agentp_market/api/v1/: templates.py
services/market/src/ohent_market/: __main__.py  config.py  main.py  service.py
services/market/src/ohent_market/api/v1/: templates.py
services/memory/: pyproject.toml
services/scheduler/: pyproject.toml
services/scheduler/src/agentp_scheduler/: __main__.py  approval.py  celery_app.py  config.py  health.py  lifecycle.py  main.py  proxy.py
services/scheduler/src/ohent_scheduler/: __main__.py  proxy.py
services/shared/: pyproject.toml
services/shared/src/agentp_shared/: __init__.py  api_mapping.py  config.py  db.py  errors.py  event_bus.py  models.py  redis.py  responses.py  schemas.py  security.py  service_client.py
services/shared/src/ohent_shared/: api_mapping.py  config.py
tests/: conftest.py  smoke_e2e_m1.py  smoke_e2e_m2.py  smoke_e2e_m5.py  test_api_mapping.py  test_auth.py  test_auth_apikey_renew.py  test_auth_audit.py  test_auth_members.py  test_auth_roles.py  test_billing.py  test_billing_aggregation.py  test_billing_budget.py  test_billing_export.py  test_billing_rules.py  test_builder.py  test_builder_import_export.py  test_builder_validation.py  test_celery_tasks.py  test_dependencies.py  test_e2e_approval.py  test_e2e_builder.py  test_e2e_full_chain.py  test_e2e_lifecycle.py  test_event_bus.py  test_event_bus_consume.py  test_event_bus_init.py  test_event_bus_publish.py  test_fixtures.py  test_gateway.py  test_gateway_audit.py  test_gateway_circuit_breaker.py  test_gateway_cors.py  test_gateway_ratelimit.py  test_gateway_websocket_stub.py  test_health_auth.py  test_health_billing.py  test_health_gateway.py  test_health_host.py  test_health_market.py  (+29 more)
(+77 files in other folders)
