[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "httpx-ws>=0.5.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "services/shared/src",
    "services/gateway/src",
    "services/auth/src",
    "services/host/src",
    "services/scheduler/src",
    "services/memory/src",
    "services/market/src",
    "services/billing/src",
    "agent-orchestrator/src",
]
asyncio_mode = "auto"
markers = [
    "e2e: End-to-end tests (require running services)",
    "integration: Cross-service integration tests (require running services)",
    "smoke: Infrastructure smoke tests (PostgreSQL + Redis)",
]
