[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentp-scheduler"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "agentp-shared",
]

[project.optional-dependencies]
celery = ["celery[redis]>=5.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentp_scheduler"]
