[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentp-shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentp_shared"]
